--- a/src/pages/registro/registro.html
+++ b/src/pages/registro/registro.html
@@ -33,7 +33,7 @@
       </ion-item>
       <ion-item>
         <ion-label floating>Contraseña</ion-label>
-        <ion-input type="password" [(ngModel)]="userData.email"></ion-input>
+        <ion-input type="password" [(ngModel)]="userData.password"></ion-input>
       </ion-item>
     </ion-list>
   <button ion-button block (click)='registrarme()'>Registrarme</button>
