--- a/src/pages/recordar/recordar.html
+++ b/src/pages/recordar/recordar.html
@@ -15,13 +15,16 @@
 
 <ion-content padding>
   <span>Por favor ingrese su correo electrónico para recuperar su clave</span>
-  <form>
+  <form [formGroup]='formulario' (ngSubmit)="recordarContrasena()">
     <ion-list inset>
       <ion-item>
         <ion-label floating>Email</ion-label>
-        <ion-input type="text" value=""></ion-input>
+        <ion-input type="email" formControlName="email"></ion-input>
       </ion-item>
     </ion-list>
-    <button ion-button block>Ingresar</button>
+    <ion-label color="danger" *ngIf="formulario.controls['email'].errors && formulario.controls['email'].dirty" class="danger">
+      Ingrese un email válido!
+    </ion-label>
+    <button ion-button block type="submit" [disabled]="!formulario.valid">Recordar</button>
   </form>
 </ion-content>
