--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,30 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Home</ion-title>
+    <ion-title>Eventus</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+  <ion-refresher (ionRefresh)="actualizar($event)">
+    <ion-refresher-content></ion-refresher-content>
+  </ion-refresher>
+    <ion-card *ngFor='let evento of eventos' (click)='verEvento(evento)'>
+      <ion-item>
+        <ion-avatar item-start>
+          <img src={{evento.usuario.avatar}}>
+        </ion-avatar>
+        <h2>{{evento.usuario.first_name}}</h2>
+        <p>{{evento.fecha}}</p>
+      </ion-item>
+      <img src={{evento.imagen}}>
+      <ion-card-content>
+        <h3>{{evento.nombre}}</h3>
+        <p>{{evento.observaciones.substring(0, 80)}}...</p>
+      </ion-card-content>
+    </ion-card>
+
+
+    <ion-fab right bottom>
+      <button ion-fab mini><ion-icon name="add"></ion-icon></button>
+    </ion-fab>
 </ion-content>
