--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,11 +1,17 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      About
+      Acerca de Eventus
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
+  <p>
+    Eventus es una app sin terminar que le ayuda a ver eventos!
+  </p>
+  <button ion-button full icon-left (click)='cerrarSesion()'>
+    <ion-icon name="exit"></ion-icon>
+    Cerrar Sesión
+  </button>
 </ion-content>
